# DailyGodotCpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Controller.gdns  README.md  build.sh  build_cpp.sh  export_presets.cfg  lib_daily_godot.gdnlib  project.godot  test_start.tscn
core/: CMakeLists.txt
core/include/: ButtonQuit.h  Controller.h  button_continue.h  button_main_menu.h  button_pressed.h  button_pressed_normal.h  button_quit.h  button_test_start.h  controller.h  menu_cancel.h  path.h  util.h
core/src/: Controller.cpp  GodotLibrary.cpp
resource/font/SourceCodePro/: SourceCodePro-Black.tres
resource/graph/: icon.png.import
resource/sound/: Fellows.mp3.import
resource/theme/: buttom.tres
scene/: test_solar.tscn  test_start.tscn
scene/main/: menu_main.tscn
scene/menu/: menu_cancel.tscn  menu_main.tscn
script/: ButtonContinue.gdns  ButtonMainMenu.gdns  ButtonQuit.gdns  ButtonTestStart.gdns  Controller.gdns  MenuCancel.gdns
